fixed frequency layout on mobile

--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -195,6 +195,9 @@ button{
 	h1{
 		font-size: 2rem;
 	}
+	.frequencyContent{
+		width: 20%;
+	}
 }
 @media (min-width: 900px) and (max-width: 1200px) {
 	.col-md-12{
